--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.4.1",
     "react-on-rails": "11.0.8",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
