--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.82.1",
+    "semantic-ui-sass": "^2.3.1"
   },
   "devDependencies": {
+    "resolve-url-loader": "^2.3.0",
     "webpack-dev-server": "2.11.2"
   }
 }
