--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "actioncable": "^5.2.1",
     "babel-preset-react": "^6.24.1",
     "cross-fetch": "^2.2.2",
     "humps": "^2.0.1",
