--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.82.1",
-    "semantic-ui-sass": "^2.3.1"
+    "semantic-ui-sass": "^2.3.1",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "resolve-url-loader": "^2.3.0",
