--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.82.1",
     "semantic-ui-sass": "^2.3.1",
+    "styled-components": "^4.1.3",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
